# agi-diy

./: .env.local.example  .gitignore  .pre-commit-config.yaml  Config  DEPLOYMENT.md  README.md  TODO.md  build-strands.mjs  harmony.yaml  package.json
.github/: DEPLOYMENT.md  PRE-COMMIT.md
.github/workflows/: deploy.yml
.kiro/settings/: lsp.json
docs/: DOCKING_SPEC.md  KIRO_CLI_DETECTION.md  UNIFIED_AGENT_MANAGEMENT.md  agent-mesh-settings.js  agent-mesh.js  agentcore-relay.js  agents.json  agi.html  browser-tools.js  cognitoauth.html  complication-registry.js  context-injector.js  dashboard.html  default-complications.js  erc8004-discovery.js  event-model.js  event-schemas.js  index.html  layout-manager.js  map.js  mesh.html  model-utils.js  relay-server.js  sauhsoj-ii.html  strands.js  sw.js  trusted-owners.json  vision.js  webllm.js
docs/widgets/: README.md  agent-chat-widget.js  agent-detail-widget.js  agents-widget.js  agents-widgets.css  available-agents-widget.js  chat-widget.js  erc8004-widget.js  index.js  mesh-widget.js  ring-widget.js  running-agents-widget.js  task-detail-widget.js  task-flow-widget.js  tasks-widget.js  (+1 more)
infra/: DEPLOYMENT.md  cloudformation-simple.yaml  cloudformation.yaml  s3-website-template.yaml  s3-website.yaml
p2p-server/: README.md  config.example.json  pyproject.toml  relay-config-template.json  requirements.txt
p2p-server/ag_mesh_relay/: __init__.py  event_schemas.py  server.py
scripts/: install-hooks.sh  pre-commit
whatsupdocs/: event-model-migration.md  event-model.md  kaa-debug-findings.md  kaa-test-plan.md
